--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
   <div class="utility-page-wrap">
     <div class="utility-page-content w-form"><img src="images/IMG_5633.JPG" loading="lazy" sizes="100vw" srcset="images/IMG_5633-p-500.jpeg 500w, images/IMG_5633-p-800.jpeg 800w, images/IMG_5633.JPG 819w" alt="" class="image-3">
       <h2 class="heading password">Page Not Found</h2>
-      <div class="paragraph _404">I might be in the process of moving things around <br>or you might be in the search for something that cannot be found.</div>
+      <div class="paragraph _404">Sorry, looks like there's some cleaning up to do here.</div>
       <a href="index.html" class="button w-button">BACK HOME</a>
     </div>
   </div>
