--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://cdn.glitch.global/bb0c4105-11e9-4b9f-aca1-01052a779011/moon.ico?v=1657078959948" />
-
+    <!-- Hotjar -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3053677,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
     <title>Irish Tee-Sy | Designer</title>
 
     <meta
@@ -18,6 +28,7 @@
     <link rel="stylesheet" href="/style.css" />
 
     <script src="/script.js" defer></script>
+   
   </head>
   <body>
 <!--
