--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
           <p>Today, she is designing for video.</p>
         </div>
         <footer class="footer">
-          <a href="https://www.linkedin.com/in/iteesy/" target="_blank" class="social">/linkedin</a><br />
+          <a href="https://linkedin.com/in/iteesy/" target="_blank" class="social">/linkedin</a><br />
           <a href="https://twitter.com/uxuirish" target="_blank" class="social">/twitter</a><br />
-          <a href="https://www.are.na/irish-sy" target="_blank" class="social">/are.na</a><br />
+          <a href="https://are.na/irish-sy" target="_blank" class="social">/are.na</a><br />
           <a href="https://letterboxd.com/iteesy/" target="_blank" class="social">/letterboxd</a><br />
-          <a href="mailto: iteesy714@gmail.com" class="social">/drop a note</a><br />
+          <a href="mailto:iteesy714@gmail.com" class="social">/drop a note</a><br />
         </footer>
       </div>
     </div>
