--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </h1>
         <div class="about">
           <p>
-              She dreams to design for thoughtful experiences that will outlast
+              She dreams of designing thoughtful experiences that will outlast
               her.
           </p>
           <p>
