--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="wrapper">
       <div class="intro" role="main">
         <h1 class="title">
-            Irish Tee-Sy is finding what the internet would be like if it was
+            Irish is finding what the internet would be like if it was
             made by people who love us.
         </h1>
         <div class="about">
