--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--HELLO INSPECTOR! THIS SITE IS KINDA UNDER CONSTRUCTION??? But I finally FINALLY made this from scratch!!! I know this is super web dev 101 but still!!!-->
-<!--Last updated: July 2022-->
+<!--Hi inspector!!-->
+<!--Last updated: Sept 2024-->
 
 <html lang="en">
   <head>
@@ -49,20 +49,16 @@
     <div class="wrapper">
       <div class="intro" role="main">
         <h1 class="title">
-            Irish is finding what the internet would be like if it was
-            made by people who love us.
+            Irish is finding out who she is when no one is watching. 
         </h1>
         <div class="about">
           <p>
-              She dreams of designing thoughtful experiences that will outlast
-              her.
+              She believes the internet is a place to live out your second chances.  
           </p>
           <p>
-            She has designed experiences for live audio communication, DEI
-              initiatives, productivity apps, internal tools, animal rescue
-              management, and logistics & supply chain.
+              She has designed experiences for e-commerce, spatial awareness, CVAI, live audio communication, DEI initiatives, productivity, internal tools, animal rescue, and logistics & supply chain.
           </p>
-          <p>Today, she is designing for video.</p>
+          <p>Today, she is learning how to make her own world. .</p>
         </div>
         <footer class="footer">
           <a href="https://linkedin.com/in/iteesy/" target="_blank" class="social">/linkedin</a><br />
