--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
           <p>Today, she is learning how to make her own world. .</p>
         </div>
         <footer class="footer">
-          <a href="https://yourworldoftext.com/~digirish/" target="_blank" class="social">/guestbook</a><br />
+          <a href="https://yourworldoftext.com/~digirish/" target="_blank" class="social">/sigh the guestbook</a><br />
           <a href="https://twitter.com/uxuirish" target="_blank" class="social">/twitter</a><br />
           <a href="https://are.na/irish-sy" target="_blank" class="social">/are.na</a><br />
           <a href="https://letterboxd.com/iteesy/" target="_blank" class="social">/letterboxd</a><br />
-          <a href="mailto:iteesy714@gmail.com" class="social">/drop a note</a><br />
         </footer>
       </div>
     </div>
