--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <p>
               She has designed experiences for e-commerce, spatial awareness, CVAI, live audio communication, DEI initiatives, productivity, internal tools, animal rescue, and logistics & supply chain.
           </p>
-          <p>Today, she is learning how to make her own world. .</p>
+          <p>Today, she is learning to make her own world.</p>
         </div>
         <footer class="footer">
           <a href="https://yourworldoftext.com/~digirish/" target="_blank" class="social">/sigh the guestbook</a><br />
