--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <p>Today, she is learning to make her own world.</p>
         </div>
         <footer class="footer">
-          <a href="https://yourworldoftext.com/~digirish/" target="_blank" class="social">/sign the guestbook</a><br />
+          <a href="https://yourworldoftext.com/~digirish/" target="_blank" class="social">/sign guestbook</a><br />
           <a href="https://letterboxd.com/iteesy/" target="_blank" class="social">/letterboxd</a><br />
           <a href="https://twitter.com/uxuirish" target="_blank" class="social">/twitter</a><br />
           <a href="https://are.na/irish-sy" target="_blank" class="social">/are.na</a><br />
