--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 !-->
     <div class="wrapper">
       <div class="intro" role="main">
+        <img src="doodle.png" alt="girl with top half of face peeking around" height="200">
+
         <h1 class="title">
             Irish is finding out who she is when no one is watching. 
         </h1>
