--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               She believes the internet is a place to live out your second chances.  
           </p>
           <p>
-              She has designed experiences for e-commerce, spatial awareness, CVAI, live audio communication, DEI initiatives, productivity, internal tools, animal rescue, and logistics & supply chain.
+              She has designed experiences for e-commerce, spatial awareness, computer vision AI, live audio communication, DEI initiatives, productivity, internal tools, animal rescue, and logistics & supply chain.
           </p>
           <p>Today, she is learning to make her own world.</p>
         </div>
