--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
         <footer class="footer">
           <a href="https://yourworldoftext.com/~digirish/" target="_blank" class="social">/sign guestbook</a><br />
           <a href="https://letterboxd.com/iteesy/" target="_blank" class="social">/letterboxd</a><br />
-          <a href="https://twitter.com/uxuirish" target="_blank" class="social">/twitter</a><br />
+<a href="https://www.instagram.com/t33.sy/" target="_blank" class="social">/instagram</a><br />
+                    <a href="https://twitter.com/uxuirish" target="_blank" class="social">/twitter</a><br />
           <a href="https://are.na/irish-sy" target="_blank" class="social">/are.na</a><br />
+
         </footer>
       </div>
     </div>
