--- a/index.html
+++ b/index.html
@@ -1,76 +1,155 @@
 <!DOCTYPE html>
-<!--Hi inspector!!-->
-<!--Last updated: Sept 2024-->
-
+    <!-- hi inspector, listen up! for the first time in my creative life, i'm freeing myself web builders and templates! no more subscriptions!!  no more customer support emails!!! no more moving on to the next trendy platform!!! it's only me and you babe!!! and most of all, WELCOME TO MY INTERNET!!!!!!!!!! 
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣴⣶⡶⣶⣤⡀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣴⠶⢾⣟⣻⣟⣻⡛⠾⢿⠛⠛⠛⠒⠂⠉⣻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⡏⠦⢘⢿⣿⣿⣿⣿⡿⠄⣈⢲⠀⠀⠀⢀⠀⠀⢿⣆⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⢯⡆⠤⠀⠀⠉⠡⠆⠀⡢⢋⠜⠀⠀⠁⠀⢀⠂⠈⣿⡄⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡧⡇⠀⠀⣀⠤⠔⢂⠡⠄⠈⠀⠀⠐⠀⠌⡲⢄⠠⣘⣷⡄⠀⠈⠂⠀⠀⠀⠀⠀⣀⣠⣀⠀⠀⢡⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡀⠤⠀⠂⠀⠀⣿⡗⡇⡂⠭⠐⠂⠉⠀⢶⡄⣈⣴⣾⣶⡶⠞⠃⠈⠉⣽⣿⣿⣄⣀⣠⣤⣴⣶⣾⣿⢟⡟⣿⡇⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠔⠈⠀⠀⠀⣀⣀⣤⣤⣿⣿⣽⣤⣤⣤⡦⠶⠛⠈⢉⠝⣿⣿⢿⣿⣿⠆⣠⣌⠹⣿⣿⣿⣿⣛⣛⣯⣭⣥⠈⠙⢾⣿⠃⠀⢠⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠀⠀⣀⣴⠾⣛⢫⠭⣉⠳⡐⢆⡚⡍⠭⢭⢛⣛⠶⠾⣿⣮⣿⣯⣾⣿⣿⣾⡿⠿⠟⠛⠛⠉⣉⣉⣤⡴⠞⣋⣤⣾⠟⠁⠀⢀⠂⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠀⠀⣴⢟⡵⣉⠖⣡⠞⡰⢣⡙⠦⡱⢌⡙⢆⠣⢆⡹⢔⡢⣝⢻⡿⢿⠿⡿⠿⡷⢿⠾⣟⢻⠻⣍⣳⣼⣾⣿⡿⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠀⠸⣿⣸⡴⢡⢚⠤⣋⡔⢣⣜⣡⣳⣮⣽⣾⣿⣾⣶⣿⣶⣷⣿⡿⠾⠾⣷⣿⣬⣷⣿⣶⣿⣿⣿⣿⠟⠉⠙⣿⢦⡀⠀⠠⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠀⠈⠻⠷⣷⣾⣷⣶⠿⠿⠿⠿⢿⣿⣿⣿⣿⣿⣿⣿⡿⠋⣀⣤⡤⣤⣄⡉⢿⣿⠿⠿⠛⠛⠛⠛⠛⠓⠒⠾⣶⡇⠀⠀⠁⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⢀⡀⠀⠀⠀⠀⠀⣀⣤⣶⣾⢿⣿⣿⡿⠛⣉⣭⡟⢠⣾⣁⡤⢴⣶⣶⡝⢦⠹⠀⠀⠀⠀⠶⠶⠀⠀⠀⠀⠈⠛⢷⣄⠀⠀⠡⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠁⠀⢀⣤⡶⠟⢋⡭⠞⣡⠞⣡⠏⢠⡾⠉⣼⡃⣿⣿⣿⣧⣴⣿⣿⣷⢸⠀⣠⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣧⠀⠀⡆⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⠟⣡⠀⠀⠉⠀⠞⠁⠐⠃⠀⣾⢀⣆⢿⣇⣟⠻⣿⣿⣿⣿⡿⢃⠎⠰⠃⠀⠀⠀⠀⠀⢀⣠⣤⣶⣴⡶⠶⣼⡟⠀⠀⡇⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣤⠶⠛⠁⠸⠏⢠⠇⠀⠀⠀⠀⠀⠀⢠⡇⢸⡿⠘⣿⢮⣳⢬⣭⣭⠭⠗⠉⠀⠀⠀⠀⣀⣤⡶⠾⠛⠉⠁⠀⠀⠀⢠⡿⠁⠀⠠⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠀⠀⠀⣀⣴⠞⠋⠀⠀⠀⣴⠟⢠⠏⠀⠀⠀⠀⠀⠀⠀⡾⢠⠏⠀⠀⠈⠉⠀⠀⠀⠀⠀⠀⢀⣠⣤⠶⠛⠉⠁⠀⠀⠀⠀⠀⠀⠀⣰⡟⠁⠀⠠⠁⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠊⠀⠀⣠⡾⠋⢠⣴⠞⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡟⢠⠄⠀⠀⠀⠀⢀⣀⣤⠴⠞⠋⠉⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣶⡾⠋⠀⠀⡐⠁⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠔⠀⠀⣠⡾⠋⡀⠀⠉⣵⠟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣇⠘⠦⠤⠴⠶⠛⠋⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣖⡿⣿⠟⠀⠀⠀⠊⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⠀⠀⣴⢟⡀⠞⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣄⣀⠀⠻⣦⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⠶⠛⠀⣼⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⠣⣿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣏⢞⣶⣦⣀⠙⠛⠶⠶⠂⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣽⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⠃⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣴⣞⣫⣿⠿⢁⠈⠈⠙⠛⠛⠲⠶⠶⠶⠶⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣾⣿⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠀⠀⣸⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣤⣴⠿⠛⠉⢁⣠⠴⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⢞⡿⢃⢸⡗⠀⠐⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⣀⠀⠀⠀⣿⣤⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⠞⠋⠁⠀⣀⡴⠞⠋⠁⠀⠀⠀⠀⠀⣀⡀⣀⣤⢴⢶⣚⣿⠿⠖⠀⠀⠀⠀⠀⢚⣵⣿⢧⠛⠹⣧⠀⠀⡀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠄⠀⠁⠀⠀⢀⣾⣿⣉⣉⡙⠻⢦⣄⠀⠀⠀⠀⠀⢰⡟⠁⠀⠀⠘⠶⣭⡀⠀⠀⠀⢀⣠⣴⣶⡿⠿⡝⠳⠾⠛⠋⠁⠀⠀⠀⠀⠀⠀⠀⢠⡿⢹⣿⡛⠀⠀⢻⡆⠀⢠⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⡐⠀⠀⣠⡴⠶⠛⠛⠁⠀⠀⠉⠻⣦⡀⠻⣷⡀⠀⠀⠀⠸⣧⠀⠀⠀⠀⠀⠀⢿⣤⣴⡿⣟⡿⠙⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⡿⠁⠘⣿⡇⠀⠀⢹⡷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⢰⣏⣤⣤⣤⣀⡀⠀⠀⠀⠀⠈⠁⠀⢿⣿⡀⠀⠀⠀⢻⡆⠀⠀⠀⠀⠀⠈⣿⣧⠛⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣟⣀⣀⣤⣿⡇⠀⠀⢠⣿⠀⠀⡄⠀⠀⠀⠀⠀⠀⠀
+⠠⠀⠀⣠⡶⠟⠛⠛⠛⠛⠛⠛⠓⠂⠀⠀⠀⠀⠀⣿⣯⠇⠀⠀⠀⠈⢿⡄⠀⠀⠀⠀⠀⠸⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⢠⣿⠀⠀⢇⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⢀⣿⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⡝⢀⠀⠀⠀⠀⠘⣿⡄⠀⠀⠀⠀⠀⢻⣇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣶⣿⣿⣯⣟⣿⣿⣿⣛⣉⠉⠁⢠⣤⣿⣀⠀⠀⠀⠂⠄⢀⡀⠀⠀
+⢀⠀⠀⢻⣎⠳⢶⣤⣄⣀⣀⣀⣀⣀⣤⣴⣾⣿⣿⡟⠀⠈⣧⠀⠀⠀⠀⠘⣿⡄⠀⠀⠀⠀⠀⢿⡄⠀⠀⠀⠀⠀⣀⣠⣤⣶⣿⣿⣿⣿⣿⠟⣿⠟⠛⠛⢛⣉⣉⣠⠀⠀⠉⠙⠛⠷⣦⣄⣀⠀⠀⠈⠀⡀
+⠀⠀⠀⠀⠙⢷⣄⡈⠻⣟⠛⠿⢿⣿⣿⣿⣿⣿⡿⠷⣄⣠⣸⣦⣤⣄⠀⠀⠈⢿⣆⠀⠀⠀⠀⠘⣿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠛⠉⠁⠀⠈⠻⣶⠾⠟⠛⢿⣿⡟⢀⣄⠀⢳⣶⣤⣄⣉⠉⠻⣦⠀⠀⠁
+⠀⠀⠀⠀⠀⠀⠙⠻⣦⣝⣶⣦⣤⣌⣙⡛⠿⣿⣿⣶⣤⣤⣾⠿⠟⠻⠛⠛⠛⠞⠿⣦⡀⠀⠀⠀⠀⠈⠉⡙⠛⠛⠛⠛⠻⠟⠻⠟⠶⢾⣦⣤⣤⡀⠀⠀⠀⣿⣉⣠⡿⠻⣷⡈⢿⡍⠙⠛⠻⠟⠋⠀⠀⠄
+⠀⠀⠀⠀⠀⠀⠀⠀⠈⣿⣀⣽⠟⠛⠛⠻⢷⣄⣤⡿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⢷⣦⣄⣀⠀⠀⠻⢦⡘⢿⣟⣻⡿⠿⠿⠟⠿⢶⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠄⠊⠀
+⠀⠀⠀⠀⠀⠀⠈⠀⠀⠈⠉⠁⠀⠀⢀⠀⠀⠉⠉⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠛⠻⠷⣶⣄⠙⢷⣄⠉⣻⡆⠀⠀⠀⠀⠀⠀⠀⠀⠈⠐⠀⠀⠀⠐⠂⠤⠄⠠⠤⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠒⠒⠒⠂⠁⠀⠁⠐⠒⠂⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠂⠠⠀⡀⠀⠈⠛⠿⠛⠙⠛⠋⠁⠀⡸⠈⠉⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠂⠄⠀⠀⠀⠀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀-->
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://cdn.glitch.global/bb0c4105-11e9-4b9f-aca1-01052a779011/moon.ico?v=1657078959948" />
-    <!-- Hotjar -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:3053677,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-    <title>Irish Tee-Sy | Designer</title>
-
-    <meta
-      name="description"
-      content="Website"
-    />
-
-    <link rel="stylesheet" href="/style.css" />
-
-    <script src="/script.js" defer></script>
-   
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Irish Tee-Sy</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/psm7oqu.css"/>
   </head>
-  <body>
-<!--
-    <div class="announcement bar" id="banner">
-      ✧ﾟ:*This site is a playground to all of my many portfolio
-      iterations. Have a
-      nice day! *:ﾟ✧
-      <button
-        type="button"
-        id="dismiss_banner"
-        data-dismiss="dismiss"
-        aria-label="dismiss"
-      >
-        <span aria-hidden="true"><u>dismiss</u></span>
-      </button>
-    </div>
-!-->
-    <div class="wrapper">
-      <div class="intro" role="main">
-        <img src="images/doodle.png" alt="girl with top half of face peeking around" width="100" height="75">
+  <body onload="setInterval(step,100)">
+    <!-- intro-->
 
-        <h1 class="title">
-            Irish is finding out who she is when no one is watching. 
-        </h1>
-        <div class="about">
-          <p>
-              She believes the internet is a place to live out your second chances.  
-          </p>
-          <p>
-              She has designed experiences for e-commerce, spatial awareness, computer vision AI, live audio communication, DEI initiatives, productivity, internal tools, animal rescue, and logistics & supply chain.
-          </p>
-          <p>Today, she is learning to make her own world.</p>
-        </div>
-        <footer class="footer">
-          <a href="https://yourworldoftext.com/~digirish/" target="_blank" class="social">/sign guestbook</a><br />
-          <a href="https://letterboxd.com/iteesy/" target="_blank" class="social">/letterboxd</a><br />
-<a href="https://www.instagram.com/t33.sy/" target="_blank" class="social">/instagram</a><br />
-                    <a href="https://twitter.com/uxuirish" target="_blank" class="social">/twitter</a><br />
-          <a href="https://are.na/irish-sy" target="_blank" class="social">/are.na</a><br />
-
-        </footer>
+    <div class="intro">
+      <!-- col 1 -->
+      <div class="projects">
+        <h4>Catch my small websites ── .✦</h4>
+        <div class="project-list">
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name" id="uxBtn"><a href="http://uxuirish.xyz">uxuirish.xyz (boring!)</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="snow">
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+      </div>
       </div>
     </div>
+      <!-- col 2 -->
+      <div class="bio">
+        <div class="headshot"></div>
+        <!-- col 2 -->
+        <div class="bio-text">
+          <h4>Irish Tee-Sy is an experience designer in San Francisco, CA.</h4>
+          <p class="line1">
+          </p>
+          <p class="line2"></p>
+          <p class="line3">
+          </p>
+          <p class="line4">
+          </p>
+          <p class="line5">
+          </p>
+          <button class="addLineButton" onclick="addLine()">Learn more</button>
+        </div>
+      </div>
+    </div>
+    <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
+
+    <script type="text/javascript">
+      //thank you @frumbert for this
+      message = "✿✿✿✿𝓽𝓱𝓪𝓷𝓴 𝔂𝓸𝓾 𝓯𝓸𝓻 𝓯𝓲𝓷𝓭𝓲𝓷𝓰 𝓶𝓮💟💟💟💟";
+      function step() {
+        message = message.substr(1) + message.substr(0,1);
+        document.title = message.substr(0,15);
+      }
+    </script>
+    <script>
+
+//uxuirish.xyz
+document
+    .getElementById("uxBtn")
+    .addEventListener("click", function(  ){ 
+        return confirm("🛑⛔️🫷🥺🫸 Stop! This website reflects my 9-5 self. Do you really want to see this side of me?") ;
+    });
+
+//90s cursor effects by tholman
+  window.addEventListener("load", (event) => {
+    new cursoreffects.fairyDustCursor({
+      colors: ["#446B3A", "#86B77A", "#C0D5BA"]
+    });
+  });
+
+//BIO EFFECTS_____________________________
+const addLineButton = document.querySelector(".addLineButton");
+const line1 = document.querySelector(".line1");
+const line2 = document.querySelector(".line2");
+const line3 = document.querySelector(".line3");
+const line4 = document.querySelector(".line4");
+const line5 = document.querySelector(".line5");
+
+
+let lineCount = 1; 
+
+function addLine(){
+  if (lineCount === 1) {
+    line1.textContent = "Expanding into internet art. Reliving slow narratives through a handmade poetic web.";
+  } else if (lineCount === 2) {
+    line2.textContent = "No templates. No frameworks. Maybe a few libraries.";
+  } else if (lineCount === 3) {
+    line3.textContent = "Dreaming of creating agency towards a loving internet. A reminder that there is always a human behind the technology.";
+  } else if (lineCount === 4) {
+    line4.innerHTML = '<a href="https://www.yourworldoftext.com/~digirish/" target=”_blank”>sign guestbook</a> / <a href="https://www.are.na/irish-sy/"  target=”_blank” ">are.na</a> / <a href="https://www.instagram.com/_t__sy"  target=”_blank” >ig</a>';
+  } else if (lineCount === 5) {
+    line5.innerHTML = '<img src="/photos/me hehe.png" id ="me-hehe" /><p id = "hi">hi!</p>';
+    addLineButton.remove();
+  }
+  lineCount++;
+}
+
+    </script>
   </body>
 </html>
