--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <!-- hi inspector, listen up! for the first time in my creative life, i'm freeing myself web builders and templates! no more subscriptions!!  no more customer support emails!!! no more moving on to the next trendy platform!!! it's only me and you babe!!! and most of all, WELCOME TO MY INTERNET!!!!!!!!!! 
+    <!-- hi inspector! for the first time in my creative life, i'm freeing myself web builders and templates! no more subscriptions!!  no more customer support emails!!! no more moving on to the next trendy platform!!! it's only me and you babe!!! and most of all, WELCOME TO MY INTERNET!!!!!!!!!! 
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣴⣶⡶⣶⣤⡀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣴⠶⢾⣟⣻⣟⣻⡛⠾⢿⠛⠛⠛⠒⠂⠉⣻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
@@ -56,12 +56,12 @@
         <div class="project-list">
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
-        <div class="project-name"><a href="#">coming soon!</a></div>
-        <div class="project-name"><a href="#">coming soon!</a></div>
-        <div class="project-name"><a href="#">coming soon!</a></div>
-        <div class="project-name"><a href="#">coming soon!</a></div>
-        <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name" id="uxBtn"><a href="http://uxuirish.xyz">uxuirish.xyz (boring!)</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="snow">
