Clean up comments

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 document.getElementById("uxBtn").addEventListener("click", function (event) { 
     if (!confirm("🛑⛔️🫷🥺🫸 Stop! This website reflects my 9-5 self. Do you really want to see this side of me?")) {
-        event.preventDefault(); // Prevent the default action (e.g., navigation)
+        event.preventDefault(); // Cancel button
     }
 });
 
