updated alay layout and learn more button

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </p>
           <p class="line5">
           </p>
-          <button class="addLineButton" onclick="addLine()">Learn more</button>
+          <button class="addLineButton" onclick="addLine()">Learn more <3</button>
         </div>
       </div>
     </div>
@@ -165,7 +165,7 @@ let lineCount = 1;
 function addLine(){
   if (lineCount === 1) {
     //line1.textContent = "Background in AI/Human-Computer Interaction research at the University of California, Santa Cruz. Graphic design to designing interfaces.";
-    line1.innerHTML = "Background in AI/Human-Computer Interaction research at the University of California, Santa Cruz. From <a href='alay.html' target='_blank'>graphic design</a> to designing interfaces.";
+    line1.innerHTML = "Background in AI/Human-Computer Interaction research at the University of California, Santa Cruz. From <a href='alay.html'>graphic design</a> to designing interfaces.";
   } else if (lineCount === 2) {
     line2.textContent = "Expanding into internet art. Reliving slow narratives through a handmade poetic web.";
   } else if (lineCount === 3) {
