--- a/alay.html
+++ b/alay.html
@@ -31,29 +31,34 @@
     <link rel="stylesheet" href="https://use.typekit.net/psm7oqu.css"/>
   </head>
 
-  <a href="index.html">Back</a>
 
 
   <style>
-    .alay-prev{ 
-display: flex;    
-flex-direction: column;
-gap: 10px;
+    .alay {
+      margin: 10px;
+    }
 
+.alay-prev {
+            display: flex;
+            flex-direction: row;
+            overflow-x: auto;
+            gap: 20px;
+        }
 }
   </style>
 
   <div class="alay"> 
-    
-    <h1>My poetic journey started here.</h1>
-<p>Alay [ah-lie] (Tagalog for "offering") is a print/art organization housed under Student Media/Bayanihan at the University of California, Santa Cruz. For over 20 years, Alay annually publishes an anthology that contains art submissions (photography, poetry, drawings, etc.) as a collective medium of self-expression from students of color. I took on the role as one of the editor-in-chiefs in 2018. </p>
+    <a href="index.html">Back</a>
+
+    <h1>My journey to poetics started here.</h1>
+<p>Alay <i>[ah-lie]</i> (Tagalog for "offering") is a print/art organization housed under Student Media/Bayanihan at the University of California, Santa Cruz. For over two decades, Alay has released a yearly anthology showcasing artistic submissions including photography, poetry, and drawings. This collection serves as a collaborative platform for self-expression from students of color, exploring how culture influences their diasporic identity. One year, I took on the role as one of the editor-in-chief. </p>
 <p>The theme was  Sunrise / Sunset to represent the day in the lives of BIPOC and the Filipino youth community through art. </p>
 <p>If you would like a copy or see the booklet in person, I’d be more than happy to show you! </p>
 <div class="alay-prev">
 <img src="photos/alay1.jpeg" alt="Book cover - Pagsikat ng Araw" width="515" height="600">
-<img src="photos/alay3.jpeg" alt="What got you through the day? in text" width="515" height="600">
-<img src="photos/alay4.jpeg" alt="Collage of responses from college students" width="515" height="600">
-<img src="photos/alay2.jpeg" alt="Girl in a jacket digital art" width="515" height="600">
+<img src="photos/alay3.jpeg" alt="What got you through the day? in text" width="535" height="600">
+<img src="photos/alay4.jpeg" alt="Collage of responses from college students" width="675" height="600">
+<img src="photos/alay2.jpeg" alt="Girl in a jacket digital art" width="535" height="600">
 </div>
   </div>
   </body>
