--- a/index.html
+++ b/index.html
@@ -3,39 +3,34 @@
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣴⣶⡶⣶⣤⡀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣴⠶⢾⣟⣻⣟⣻⡛⠾⢿⠛⠛⠛⠒⠂⠉⣻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⡏⠦⢘⢿⣿⣿⣿⣿⡿⠄⣈⢲⠀⠀⠀⢀⠀⠀⢿⣆⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⡏⠦⢘⢿⣿⣿⣿⣿⡿⠄⣈⢲⠀⠀⠀⢀⠀⠀⢿⣆⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⢯⡆⠤⠀⠀⠉⠡⠆⠀⡢⢋⠜⠀⠀⠁⠀⢀⠂⠈⣿⡄⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡧⡇⠀⠀⣀⠤⠔⢂⠡⠄⠈⠀⠀⠐⠀⠌⡲⢄⠠⣘⣷⡄⠀⠈⠂⠀⠀⠀⠀⠀⣀⣠⣀⠀⠀⢡⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡀⠤⠀⠂⠀⠀⣿⡗⡇⡂⠭⠐⠂⠉⠀⢶⡄⣈⣴⣾⣶⡶⠞⠃⠈⠉⣽⣿⣿⣄⣀⣠⣤⣴⣶⣾⣿⢟⡟⣿⡇⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠔⠈⠀⠀⠀⣀⣀⣤⣤⣿⣿⣽⣤⣤⣤⡦⠶⠛⠈⢉⠝⣿⣿⢿⣿⣿⠆⣠⣌⠹⣿⣿⣿⣿⣛⣛⣯⣭⣥⠈⠙⢾⣿⠃⠀⢠⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠀⠀⣀⣴⠾⣛⢫⠭⣉⠳⡐⢆⡚⡍⠭⢭⢛⣛⠶⠾⣿⣮⣿⣯⣾⣿⣿⣾⡿⠿⠟⠛⠛⠉⣉⣉⣤⡴⠞⣋⣤⣾⠟⠁⠀⢀⠂⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠀⠀⣴⢟⡵⣉⠖⣡⠞⡰⢣⡙⠦⡱⢌⡙⢆⠣⢆⡹⢔⡢⣝⢻⡿⢿⠿⡿⠿⡷⢿⠾⣟⢻⠻⣍⣳⣼⣾⣿⡿⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠀⠸⣿⣸⡴⢡⢚⠤⣋⡔⢣⣜⣡⣳⣮⣽⣾⣿⣾⣶⣿⣶⣷⣿⡿⠾⠾⣷⣿⣬⣷⣿⣶⣿⣿⣿⣿⠟⠉⠙⣿⢦⡀⠀⠠⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠀⠈⠻⠷⣷⣾⣷⣶⠿⠿⠿⠿⢿⣿⣿⣿⣿⣿⣿⣿⡿⠋⣀⣤⡤⣤⣄⡉⢿⣿⠿⠿⠛⠛⠛⠛⠛⠓⠒⠾⣶⡇⠀⠀⠁⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠢⢀⡀⠀⠀⠀⠀⠀⣀⣤⣶⣾⢿⣿⣿⡿⠛⣉⣭⡟⢠⣾⣁⡤⢴⣶⣶⡝⢦⠹⠀⠀⠀⠀⠶⠶⠀⠀⠀⠀⠈⠛⢷⣄⠀⠀⠡⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠁⠀⢀⣤⡶⠟⢋⡭⠞⣡⠞⣡⠏⢠⡾⠉⣼⡃⣿⣿⣿⣧⣴⣿⣿⣷⢸⠀⣠⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣧⠀⠀⡆⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⠟⣡⠀⠀⠉⠀⠞⠁⠐⠃⠀⣾⢀⣆⢿⣇⣟⠻⣿⣿⣿⣿⡿⢃⠎⠰⠃⠀⠀⠀⠀⠀⢀⣠⣤⣶⣴⡶⠶⣼⡟⠀⠀⡇⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣤⠶⠛⠁⠸⠏⢠⠇⠀⠀⠀⠀⠀⠀⢠⡇⢸⡿⠘⣿⢮⣳⢬⣭⣭⠭⠗⠉⠀⠀⠀⠀⣀⣤⡶⠾⠛⠉⠁⠀⠀⠀⢠⡿⠁⠀⠠⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠀⠀⠀⣀⣴⠞⠋⠀⠀⠀⣴⠟⢠⠏⠀⠀⠀⠀⠀⠀⠀⡾⢠⠏⠀⠀⠈⠉⠀⠀⠀⠀⠀⠀⢀⣠⣤⠶⠛⠉⠁⠀⠀⠀⠀⠀⠀⠀⣰⡟⠁⠀⠠⠁⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠊⠀⠀⣠⡾⠋⢠⣴⠞⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡟⢠⠄⠀⠀⠀⠀⢀⣀⣤⠴⠞⠋⠉⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣶⡾⠋⠀⠀⡐⠁⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠀⠀⣀⣴⠾⣛⢫⠭⣉⠳⡐⢆⡚⡍⠭⢭⢛⣛⠶⠾⣿⣮⣿⣯⣾⣿⣿⣾⡿⠿⠟⠛⠛⠉⣉⣉⣤⡴⠞⣋⣤⣾⠟⠁⠀⢀⠂⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠁⠀⢀⣤⡶⠟⢋⡭⠞⣡⠞⣡⠏⢠⡾⠉⣼⡃⣿⣿⣿⣧⣴⣿⣿⣷⢸⠀⣠⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣧⠀⠀⡆⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣤⠶⠛⠁⠸⠏⢠⠇⠀⠀⠀⠀⠀⠀⢠⡇⢸⡿⠘⣿⢮⣳⢬⣭⣭⠭⠗⠉⠀⠀⠀⠀⣀⣤⡶⠾⠛⠉⠁⠀⠀⠀⢠⡿⠁⠀⠠⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠀⠀⠀⣀⣴⠞⠋⠀⠀⠀⣴⠟⢠⠏⠀⠀⠀⠀⠀⠀⠀⠀⡟⢠⠄⠀⠀⠀⠀⢀⣀⣤⠴⠞⠋⠉⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣶⡾⠋⠀⠀⡐⠁⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠔⠀⠀⣠⡾⠋⡀⠀⠉⣵⠟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣇⠘⠦⠤⠴⠶⠛⠋⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣖⡿⣿⠟⠀⠀⠀⠊⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠂⠀⠀⣴⢟⡀⠞⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣄⣀⠀⠻⣦⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⠶⠛⠀⣼⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⠣⣿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣏⢞⣶⣦⣀⠙⠛⠶⠶⠂⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣽⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⠣⣿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣏⢞⣶⣦⣀⠙⠛⠶⠶⠶⠶⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣽⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⠃⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣴⣞⣫⣿⠿⢁⠈⠈⠙⠛⠛⠲⠶⠶⠶⠶⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣾⣿⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠀⠀⣸⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣤⣴⠿⠛⠉⢁⣠⠴⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⢞⡿⢃⢸⡗⠀⠐⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⣀⠀⠀⠀⣿⣤⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⠞⠋⠁⠀⣀⡴⠞⠋⠁⠀⠀⠀⠀⠀⣀⡀⣀⣤⢴⢶⣚⣿⠿⠖⠀⠀⠀⠀⠀⢚⣵⣿⢧⠛⠹⣧⠀⠀⡀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠄⠀⠁⠀⠀⢀⣾⣿⣉⣉⡙⠻⢦⣄⠀⠀⠀⠀⠀⢰⡟⠁⠀⠀⠘⠶⣭⡀⠀⠀⠀⢀⣠⣴⣶⡿⠿⡝⠳⠾⠛⠋⠁⠀⠀⠀⠀⠀⠀⠀⢠⡿⢹⣿⡛⠀⠀⢻⡆⠀⢠⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⡐⠀⠀⣠⡴⠶⠛⠛⠁⠀⠀⠉⠻⣦⡀⠻⣷⡀⠀⠀⠀⠸⣧⠀⠀⠀⠀⠀⠀⢿⣤⣴⡿⣟⡿⠙⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⡿⠁⠘⣿⡇⠀⠀⢹⡷⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⢰⣏⣤⣤⣤⣀⡀⠀⠀⠀⠀⠈⠁⠀⢿⣿⡀⠀⠀⠀⢻⡆⠀⠀⠀⠀⠀⠈⣿⣧⠛⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣟⣀⣀⣤⣿⡇⠀⠀⢠⣿⠀⠀⡄⠀⠀⠀⠀⠀⠀⠀
-⠠⠀⠀⣠⡶⠟⠛⠛⠛⠛⠛⠛⠓⠂⠀⠀⠀⠀⠀⣿⣯⠇⠀⠀⠀⠈⢿⡄⠀⠀⠀⠀⠀⠸⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⢠⣿⠀⠀⢇⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⢀⣿⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⡝⢀⠀⠀⠀⠀⠘⣿⡄⠀⠀⠀⠀⠀⢻⣇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣶⣿⣿⣯⣟⣿⣿⣿⣛⣉⠉⠁⢠⣤⣿⣀⠀⠀⠀⠂⠄⢀⡀⠀⠀
-⢀⠀⠀⢻⣎⠳⢶⣤⣄⣀⣀⣀⣀⣀⣤⣴⣾⣿⣿⡟⠀⠈⣧⠀⠀⠀⠀⠘⣿⡄⠀⠀⠀⠀⠀⢿⡄⠀⠀⠀⠀⠀⣀⣠⣤⣶⣿⣿⣿⣿⣿⠟⣿⠟⠛⠛⢛⣉⣉⣠⠀⠀⠉⠙⠛⠷⣦⣄⣀⠀⠀⠈⠀⡀
-⠀⠀⠀⠀⠙⢷⣄⡈⠻⣟⠛⠿⢿⣿⣿⣿⣿⣿⡿⠷⣄⣠⣸⣦⣤⣄⠀⠀⠈⢿⣆⠀⠀⠀⠀⠘⣿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠛⠛⠉⠁⠀⠈⠻⣶⠾⠟⠛⢿⣿⡟⢀⣄⠀⢳⣶⣤⣄⣉⠉⠻⣦⠀⠀⠁
-⠀⠀⠀⠀⠀⠀⠙⠻⣦⣝⣶⣦⣤⣌⣙⡛⠿⣿⣿⣶⣤⣤⣾⠿⠟⠻⠛⠛⠛⠞⠿⣦⡀⠀⠀⠀⠀⠈⠉⡙⠛⠛⠛⠛⠻⠟⠻⠟⠶⢾⣦⣤⣤⡀⠀⠀⠀⣿⣉⣠⡿⠻⣷⡈⢿⡍⠙⠛⠻⠟⠋⠀⠀⠄
-⠀⠀⠀⠀⠀⠀⠀⠀⠈⣿⣀⣽⠟⠛⠛⠻⢷⣄⣤⡿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⢷⣦⣄⣀⠀⠀⠻⢦⡘⢿⣟⣻⡿⠿⠿⠟⠿⢶⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠄⠊⠀
-⠀⠀⠀⠀⠀⠀⠈⠀⠀⠈⠉⠁⠀⠀⢀⠀⠀⠉⠉⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠛⠻⠷⣶⣄⠙⢷⣄⠉⣻⡆⠀⠀⠀⠀⠀⠀⠀⠀⠈⠐⠀⠀⠀⠐⠂⠤⠄⠠⠤⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠒⠒⠒⠂⠁⠀⠁⠐⠒⠂⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠂⠠⠀⡀⠀⠈⠛⠿⠛⠙⠛⠋⠁⠀⡸⠈⠉⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠂⠄⠀⠀⠀⠀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀-->
+⠀⠀⠀⠀⠀⢰⣏⣤⣤⣤⣀⡀⠀⠀⠀⠀⠈⠁⠀⢿⣿⡀⠀⠀⠀⢻⡆⠀⠀⠀⠀⠀⠀⠸⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⢠⣿⠀⠀⢇⠀⠀⠀⠀⠀⠀⠀
+⠠⠀⠀⣠⡶⠟⠛⠛⠛⠛⠛⠛⠓⠂⠀⠀⠀⠀⠀⣿⣯⠇⠀⠀⠀⠀⠘⣿⡄⠀⠀⠀⠀⠀⠀⢿⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀⢠⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⢀⣿⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣾⣿⡝⢀⠀⠀⠀⠀⠘⣿⡄⠀⠀⠀⠀⠀⠀⠀⢿⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣶⣿⣿⣯⣟⣿⣿⣿⣛⣉⠉⠁⢠⣤⣿⣀⠀⠀⠀⠂⠄⢀⡀⠀⠀
+⢀⠀⠀⢻⣎⠳⢶⣤⣄⣀⣀⣀⣀⣀⣤⣴⣾⣿⣿⡟⠀⠈⣧⠀⠀⠀⠀⠘⣿⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⢦⡘⢿⣟⣻⡿⠿⠿⠟⠿⢶⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠙⢷⣄⡈⠻⣟⠛⠿⢿⣿⣿⣿⣿⣿⡿⠷⣄⣠⣸⣦⣤⣄⠀⠀⠈⢿⣆⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠛⠛⠛⠻⠟⠻⠟⠶⢾⣦⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠙⠻⣦⣝⣶⣦⣤⣌⣙⡛⠿⣿⣿⣶⣤⣤⣾⠿⠟⠻⠛⠛⠛⠞⠿⣦⡀⠀⠀⠀⠀⠀⠀⠈⠉⠛⠛⠛⠻⠟⠻⠟⠶⢾⣦⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠈⣿⣀⣽⠟⠛⠛⠻⢷⣄⣤⡿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⢷⣦⣄⣀⠀⠀⠻⢦⡘⢿⣟⣻⡿⠿⠿⠟⠿⢶⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠒⠒⠒⠂⠁⠀⠁⠐⠒⠂⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠂⠄⠀⠀⠀⠀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀-->
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
@@ -72,7 +67,9 @@
     <div class="intro">
       <!-- col 1 -->
       <div class="projects">
-        <h4>Catch my small websites ── .✦</h4>
+        <div class="header-container">
+          <h1>Catch my small websites <span class="h1-symbols">── .✦</span></h1>
+        </div>
         <div class="project-list">
         <div class="project-name"><a href="https://we-once-existed-here.glitch.me/">we once existed here</a></div>
         <div class="project-name" id="uxBtn"><a href="http://uxuirish.xyz">uxuirish.xyz (boring!)</a></div>
@@ -95,15 +92,23 @@
           <div class="snowflake">*</div>
           <div class="snowflake">*</div>
           <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+          <div class="snowflake">*</div>
+        </div>
+        </div>
       </div>
-      </div>
-    </div>
       <!-- col 2 -->
       <div class="bio">
+
+          <h1>Irish Tee-Sy <span class="h1-symbols">──╮☘ ݁˖</span></h1>
+
         <div class="headshot"></div>
         <!-- col 2 -->
         <div class="bio-text">
-          <h4>Irish Tee-Sy is an experience designer in San Francisco, CA.</h4>
+          <h4>is an experience designer in San Francisco, CA.</h4>
           <p class="line1">
           </p>
           <p class="line2"></p>
@@ -147,7 +152,7 @@ document.getElementById("dPoetics").addEventListener("click", function (event) {
 //90s cursor effects by tholman
   window.addEventListener("load", (event) => {
     new cursoreffects.fairyDustCursor({
-      colors: ["#446B3A", "#86B77A", "#C0D5BA"]
+      colors: ["#FF28EA", "#FFB7F0", "#FFDFF7"]
     });
   });
 
@@ -169,7 +174,7 @@ function addLine(){
   } else if (lineCount === 2) {
     line2.textContent = "Expanding into internet art. Reliving slow narratives through a handmade poetic web.";
   } else if (lineCount === 3) {
-    line3.textContent = "Dreaming of creating agency towards a loving internet. A reminder that there is a real human behind technology.";
+    line3.textContent = "Dreams of creating agency towards a loving internet. A reminder that there is a real human behind technology.";
   } else if (lineCount === 4) {
     line4.innerHTML = '<a href="https://www.yourworldoftext.com/~digirish/" target=”_blank”>sign guestbook</a> ☆ <a href="https://www.are.na/irish-sy/"  target=”_blank” ">are.na</a> ☆ <a href="https://www.instagram.com/_t__sy"  target=”_blank” >instagram</a>';
   } else if (lineCount === 5) {
