--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Irish Tee-Sy</title>
-    <link rel="icon" type="image/x-icon" href="/photos/favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/psm7oqu.css"/>
   </head>
