updated link style

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <!-- col 2 -->
       <div class="bio">
 
-          <h1>Irish Tee-Sy <span class="h1-symbols">──╮☘ ݁˖</span></h1>
+          <h1>Irish Tee-Sy <span class="h1-symbols">──╮˒﹚) ݁˖</span></h1>
 
         <div class="headshot"></div>
         <!-- col 2 -->
@@ -124,6 +124,8 @@
     </div>
     <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
 
+
+    </script>
     <script type="text/javascript">
       //thank you @frumbert for this
       message = "✿✿✿✿𝓽𝓱𝓪𝓷𝓴 𝔂𝓸𝓾 𝓯𝓸𝓻 𝓯𝓲𝓷𝓭𝓲𝓷𝓰 𝓶𝓮💟💟💟💟";
@@ -134,8 +136,8 @@
     </script>
     <script>
 
-//uxuirish.xyz alert
 
+//uxuirish.xyz alert
 document.getElementById("uxBtn").addEventListener("click", function (event) { 
     if (!confirm("🛑⛔️🫷🥺🫸 Stop! This website reflects my 9-5 self. Do you really want to see this side of me?")) {
         event.preventDefault(); // Cancel button
@@ -170,7 +172,7 @@ let lineCount = 1;
 function addLine(){
   if (lineCount === 1) {
     //line1.textContent = "Background in AI/Human-Computer Interaction research at the University of California, Santa Cruz. Graphic design to designing interfaces.";
-    line1.innerHTML = "Background in AI/Human-Computer Interaction research at the University of California, Santa Cruz. From <a href='alay.html'>graphic design</a> to designing interfaces.";
+    line1.innerHTML = "Background in AI/Human-Computer Interaction research at the University of California, Santa Cruz. From <a href='alay.html'>«graphic design»</a> to designing interfaces.";
   } else if (lineCount === 2) {
     line2.textContent = "Expanding into internet art. Reliving slow narratives through a handmade poetic web.";
   } else if (lineCount === 3) {
@@ -183,6 +185,7 @@ function addLine(){
   }
   lineCount++;
 }
+
 
     </script>
   </body>
