--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ function addLine(){
   } else if (lineCount === 3) {
     line3.textContent = "Dreams of creating agency towards a loving internet. A reminder that there is a real human behind technology.";
   } else if (lineCount === 4) {
-    line4.innerHTML = '<a href="https://www.yourworldoftext.com/~digirish/" target=”_blank”>sign guestbook</a> ☆ <a href="https://www.are.na/irish-sy/"  target=”_blank” ">are.na</a> ☆ <a href="https://www.instagram.com/_t__sy"  target=”_blank” >instagram</a>';
+    line4.innerHTML = '<a href="https://www.yourworldoftext.com/~digirish/" target=”_blank”>sign guestbook</a> ☆ <a href="https://www.are.na/irish-sy/"  target=”_blank” ">are.na</a> ☆ <a href="https://www.instagram.com/_t__sy"  target=”_blank” >instagram</a> ☆ <a href="https://www.letterboxd.com/iteesy"  target=”_blank” >letterboxd</a>' ;
   } else if (lineCount === 5) {
     line5.innerHTML = '<img src="photos/me_hehe.png" id ="me-hehe" /><p id = "hi">hi!</p>';
     addLineButton.remove();
