--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
         <!-- col 2 -->
         <div class="bio-text">
           <h4>is an experience designer and internet artist in San Francisco, CA.</h4>
+          <p class="socials"><a href="https://www.yourworldoftext.com/~digirish/" target="_blank">sign guestbook</a> ☆ <a href="https://www.instagram.com/_t__sy" target="_blank">instagram</a> ☆ <a href="https://www.are.na/irish-sy/" target="_blank">are.na</a>  ☆ <a href="https://www.letterboxd.com/iteesy" target="_blank">letterboxd</a></p>
           <p class="line1">
           </p>
           <p class="line2"></p>
@@ -270,8 +271,6 @@ function addLine() {
   } else if (lineCount === 3) {
     createPopup("Dreams of creating agency towards a loving internet. A reminder that there is a real human behind technology.", lineCount);
   } else if (lineCount === 4) {
-    createPopup('<a href="https://www.yourworldoftext.com/~digirish/" target="_blank">sign guestbook</a> ☆ <a href="https://www.are.na/irish-sy/" target="_blank">are.na</a> ☆ <a href="https://www.instagram.com/_t__sy" target="_blank">instagram</a> ☆ <a href="https://www.letterboxd.com/iteesy" target="_blank">letterboxd</a>', lineCount);
-  } else if (lineCount === 5) {
     createPopup('<img src="photos/me_hehe.png" id="me-hehe" /><p id="hi">hi!</p>', lineCount);
     addLineButton.remove();
   }
