--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ function createPopup(content, index) {
 
 function addLine() {
   if (lineCount === 1) {
-    createPopup("Learned Human-Computer Interaction/AI at UCSC. Unlearned at School for Poetic Computation.", lineCount);
+    createPopup("Learned Human-Computer Interaction/AI at the University of California, Santa Cruz. Unlearned at School for Poetic Computation, NYC.", lineCount);
   } else if (lineCount === 2) {
     createPopup("Expanding into internet art. Reliving slow narratives through a <a href='https://luckysoap.com/statements/handmadeweb.html' target='_blank'>handmade poetic web</a>.", lineCount);
   } else if (lineCount === 3) {
