--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@ function createPopup(content, index) {
 
 function addLine() {
   if (lineCount === 1) {
-    createPopup("Learned Human-Computer Interaction/AI at the University of California, Santa Cruz. Unlearned at School for Poetic Computation, NYC.", lineCount);
+    createPopup("Expanding into internet art. Reliving slow narratives of identity, girlhood, and temporality through a <a href='https://luckysoap.com/statements/handmadeweb.html' target='_blank'>handmade poetic web</a>.", lineCount);
   } else if (lineCount === 2) {
-    createPopup("Expanding into internet art. Reliving slow narratives through a <a href='https://luckysoap.com/statements/handmadeweb.html' target='_blank'>handmade poetic web</a>.", lineCount);
+    createPopup("Learned Human-Computer Interaction/AI at the University of California, Santa Cruz. Unlearned at School for Poetic Computation, NYC.", lineCount);
   } else if (lineCount === 3) {
     createPopup("Dreams of creating agency towards a loving internet. A reminder that there is a real human behind technology.", lineCount);
   } else if (lineCount === 4) {
