--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <!-- last updated: april 2025
 hi inspector! for the first time in my creative life, i'm freeing myself web builders and templates! no more subscriptions!!  no more customer support emails!!! no more moving on to the next trendy platform!!! it's only me and you babe!!! and most of all, WELCOME TO MY INTERNET!!!!!!!!!! 
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣴⣶⡶⣶⣤⡀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣴⠶⢾⣟⣻⣟⣻⡛⠾⢿⠛⠛⠛⠒⠂⠉⣻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⡏⠦⢘⢿⣿⣿⣿⣿⡿⠄⣈⢲⠀⠀⠀⢀⠀⠀⢿⣆⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
@@ -68,6 +68,32 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
 
     <div class="intro">
       <!-- col 1 -->
+      <div class="bio">
+          <h1>Irish Tee-Sy <span class="h1-symbols">──╮˒﹚) ݁˖</span></h1>
+
+        <div class="headshot"></div>
+        <!-- col 2 -->
+        <div class="bio-text">
+          <p class = "opening-line">is an experience designer and internet artist in San Francisco, CA.</p>
+          <button class="addLineButton" onclick="addLine()">Learn more ☆</button>
+          <ul class="socials">
+            <li><a href="https://www.yourworldoftext.com/~digirish/" target="_blank">sign guestbook</a></li>
+            <li><a href="https://www.instagram.com/_t__sy" target="_blank">instagram</a></li>
+            <li><a href="https://www.are.na/irish-sy/" target="_blank">are.na</a></li>
+            <li><a href="https://www.letterboxd.com/iteesy" target="_blank">letterboxd</a></li>
+          </ul>
+          <p class="line1">
+          </p>
+          <p class="line2"></p>
+          <p class="line3">
+          </p>
+          <p class="line4">
+          </p>
+          <p class="line5">
+          </p>
+        </div>
+      </div>
+      <!-- col 2 -->
       <div class="projects">
         <div class="header-container">
           <h1>Catch my small websites <span class="h1-symbols">── .✦</span></h1>
@@ -82,7 +108,7 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
-        <div class="project-name" id="dPoetics"><a href="askmycomputer/index.html">ask my computer</a></div>
+        <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="snow">
           <div class="snowflake">*</div>
           <div class="snowflake">*</div>
@@ -102,28 +128,6 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
         </div>
         </div>
       </div>
-      <!-- col 2 -->
-      <div class="bio">
-
-          <h1>Irish Tee-Sy <span class="h1-symbols">──╮˒﹚) ݁˖</span></h1>
-
-        <div class="headshot"></div>
-        <!-- col 2 -->
-        <div class="bio-text">
-          <h4>is an experience designer and internet artist in San Francisco, CA.</h4>
-          <p class="socials"><a href="https://www.yourworldoftext.com/~digirish/" target="_blank">sign guestbook</a> ☆ <a href="https://www.instagram.com/_t__sy" target="_blank">instagram</a> ☆ <a href="https://www.are.na/irish-sy/" target="_blank">are.na</a>  ☆ <a href="https://www.letterboxd.com/iteesy" target="_blank">letterboxd</a></p>
-          <p class="line1">
-          </p>
-          <p class="line2"></p>
-          <p class="line3">
-          </p>
-          <p class="line4">
-          </p>
-          <p class="line5">
-          </p>
-          <button class="addLineButton" onclick="addLine()">Learn more ☆</button>
-        </div>
-      </div>
     </div>
     <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
 
@@ -131,7 +135,7 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
     </script>
     <script type="text/javascript">
       //thank you @frumbert for this
-      message = "✿✿✿✿𝓽𝓱𝓪𝓷𝓴 𝔂𝓸𝓾 𝓯𝓸𝓻 𝓯in𝓭i𝓷𝓰 𝓶𝓮💟💟💟💟";
+      message = "thanks for finding me?! ✿ ";
       function step() {
         message = message.substr(1) + message.substr(0,1);
         document.title = message.substr(0,15);
@@ -148,11 +152,11 @@ document.getElementById("uxBtn").addEventListener("click", function (event) {
 });
 
 //Digital Poetics alert
-document.getElementById("dPoetics").addEventListener("click", function (event) { 
-    if (!confirm("🍋 Phase 1 of this poem was created at Digital Poetics #1, Gray Area. It is a subtle poke at digital divination and treating the internet as our oracle. Phrase 2 WIP. ʚɞ ⁺˖ ⸝⸝")) {
-        event.preventDefault(); // cancel button
-    }
-});
+// document.getElementById("dPoetics").addEventListener("click", function (event) { 
+//     if (!confirm("🍋 Phase 1 of this poem was created at Digital Poetics #1, Gray Area. It is a subtle poke at digital divination and treating the internet as our oracle. Phrase 2 WIP. ʚɞ ⁺˖ ⸝⸝")) {
+//         event.preventDefault(); // cancel button
+//     }
+// });
 
 //90s cursor effects by tholman
   window.addEventListener("load", (event) => {
@@ -193,10 +197,10 @@ function createPopup(content, index) {
   const maxX = rect.width - 300; // Account for popup width
   
   if (window.innerWidth >= 768) {
-    // desktop: random position from right, centered vertically
+    // desktop: random position from left, centered vertically
     const randomX = Math.floor(Math.random() * maxX);
     const randomY = middleY + (Math.random() * 200 - 100); // ±100px from middle
-    popup.style.right = `${randomX}px`;
+    popup.style.left = `${randomX}px`;
     popup.style.top = `${randomY}px`;
   } else {
     //mobile: position from left with adjusted vertical range
