REVAMPED DESIGN THAT IM FINALLY HAPPY WITH YEAHHHH

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣴⠶⢾⣟⣻⣟⣻⡛⠾⢿⠛⠛⠛⠒⠂⠉⣻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⡏⠦⢘⢿⣿⣿⣿⣿⡿⠄⣈⢲⠀⠀⠀⢀⠀⠀⢿⣆⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⢯⡆⠤⠀⠀⠉⠡⠆⠀⡢⢋⠜⠀⠀⠁⠀⢀⠂⠈⣿⡄⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡧⡇⠀⠀⣀⠤⠔⢂⠡⠄⠈⠀⠀⠐⠀⠌⡲⢄⠠⣘⣷⡄⠀⠈⠂⠀⠀⠀⠀⠀⣀⣠⣀⠀⠀⢡⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡧⡇⠀⠀⣀⠤⠔⢂⠡⠄⠈⠀⠀⠐⠀⠌⡲⢄⠠⣘⣷⡄⠀⠈⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡀⠤⠀⠂⠀⠀⣿⡗⡇⡂⠭⠐⠂⠉⠀⢶⡄⣈⣴⣾⣶⡶⠞⠃⠈⠉⣽⣿⣿⣄⣀⣠⣤⣴⣶⣾⣿⢟⡟⣿⡇⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠔⠈⠀⠀⠀⣀⣀⣤⣤⣿⣿⣽⣤⣤⣤⡦⠶⠛⠈⢉⠝⣿⣿⢿⣿⣿⠆⣠⣌⠹⣿⣿⣿⣿⣛⣛⣯⣭⣥⠈⠙⢾⣿⠃⠀⢠⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠀⠀⣀⣴⠾⣛⢫⠭⣉⠳⡐⢆⡚⡍⠭⢭⢛⣛⠶⠾⣿⣮⣿⣯⣾⣿⣿⣾⡿⠿⠟⠛⠛⠉⣉⣉⣤⡴⠞⣋⣤⣾⠟⠁⠀⢀⠂⠀⠀⠀
@@ -30,7 +30,7 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
 ⢀⠀⠀⢻⣎⠳⢶⣤⣄⣀⣀⣀⣀⣀⣤⣴⣾⣿⣿⡟⠀⠈⣧⠀⠀⠀⠀⠘⣿⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⢦⡘⢿⣟⣻⡿⠿⠿⠟⠿⢶⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠙⢷⣄⡈⠻⣟⠛⠿⢿⣿⣿⣿⣿⣿⡿⠷⣄⣠⣸⣦⣤⣄⠀⠀⠈⢿⣆⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠛⠛⠛⠻⠟⠻⠟⠶⢾⣦⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠙⠻⣦⣝⣶⣦⣤⣌⣙⡛⠿⣿⣿⣶⣤⣤⣾⠿⠟⠻⠛⠛⠛⠞⠿⣦⡀⠀⠀⠀⠀⠀⠀⠈⠉⠛⠛⠛⠻⠟⠻⠟⠶⢾⣦⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠈⣿⣀⣽⠟⠛⠛⠻⢷⣄⣤⡿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⢷⣦⣄⣀⠀⠀⠻⢦⡘⢿⣟⣻⡿⠿⠿⠟⠿⢶⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣀⣽⠟⠛⠛⠻⢷⣄⣤⡿⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⢷⣦⣄⣀⠀⠀⠻⢦⡘⢿⣟⣻⡿⠿⠿⠟⠿⢶⣤⡾⠃⠀⠀⠀⠈⠉⠉⠀⠀⠘⠛⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠒⠒⠒⠂⠁⠀⠁⠐⠒⠂⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠂⠄⠀⠀⠀⠀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀-->
 <html lang="en">
   <head>
@@ -69,28 +69,30 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
     <div class="intro">
       <!-- col 1 -->
       <div class="bio">
-          <h1>Irish Tee-Sy <span class="h1-symbols">──╮˒﹚) ݁˖</span></h1>
 
         <div class="headshot"></div>
         <!-- col 2 -->
         <div class="bio-text">
-          <p class = "opening-line">is an experience designer and internet artist in San Francisco, CA.</p>
-          <button class="addLineButton" onclick="addLine()">Learn more ☆</button>
+          <div class="monitor-wrapper">
+            <div class="monitor-power-indicator"></div>
+            <div class="monitor-screen">
+              <div class="monitor-glitch"></div>
+              <p class="opening-line">Irish Tee-Sy is an experience designer and internet artist in San Francisco, CA.</p>
+              <button class="addLineButton" onclick="addLine()">Learn more ✧</button>
+            </div>
+            <img src="photos/landing-monitor.png" class="monitor-img" alt="Monitor frame">
+          </div>
           <ul class="socials">
             <li><a href="https://www.yourworldoftext.com/~digirish/" target="_blank">sign guestbook</a></li>
             <li><a href="https://www.instagram.com/_t__sy" target="_blank">instagram</a></li>
             <li><a href="https://www.are.na/irish-sy/" target="_blank">are.na</a></li>
             <li><a href="https://www.letterboxd.com/iteesy" target="_blank">letterboxd</a></li>
           </ul>
-          <p class="line1">
-          </p>
+          <p class="line1"></p>
           <p class="line2"></p>
-          <p class="line3">
-          </p>
-          <p class="line4">
-          </p>
-          <p class="line5">
-          </p>
+          <p class="line3"></p>
+          <p class="line4"></p>
+          <p class="line5"></p>
         </div>
       </div>
       <!-- col 2 -->
@@ -281,7 +283,40 @@ function addLine() {
   lineCount++;
 }
 
+document.addEventListener('DOMContentLoaded', function() {
+  const monitorWrapper = document.querySelector('.monitor-wrapper');
+  const monitorImg = monitorWrapper.querySelector('.monitor-img');
+  const monitorScreen = monitorWrapper.querySelector('.monitor-screen');
+  const powerBtn = monitorWrapper.querySelector('.monitor-power-indicator');
+  const monitorGlitch = monitorWrapper.querySelector('.monitor-glitch');
+
+  let isOn = true;
+
+  function triggerGlitch() {
+    monitorGlitch.classList.remove('active');
+    monitorGlitch.offsetWidth; // Force reflow
+    monitorGlitch.classList.add('active');
+    setTimeout(() => {
+      monitorGlitch.classList.remove('active');
+    }, 350);
+  }
+
+  powerBtn.addEventListener('click', function() {
+    isOn = !isOn;
+    triggerGlitch();
+    if (isOn) {
+      monitorImg.src = 'photos/landing-monitor.png';
+      monitorScreen.classList.remove('monitor-off');
+      if (window.toggleMonitorScanlines) window.toggleMonitorScanlines(true);
+    } else {
+      monitorImg.src = 'photos/landing-monitor-off.png';
+      monitorScreen.classList.add('monitor-off');
+      if (window.toggleMonitorScanlines) window.toggleMonitorScanlines(false);
+    }
+  });
+});
 
     </script>
+    <script src="monitor-texture.js"></script>
   </body>
 </html>
